...
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/Menu"
        app:showAsAction="ifRoom">

        <menu>

            <item android:id="@+id/menu_open"
                android:title="@string/add_book"
                android:icon="@drawable/ic_menu_open"
                app:showAsAction="ifRoom"
                />

            <item android:id="@+id/menu_receive_book"
                android:title="@string/nearby_share_receive_book"
                android:icon="@drawable/ic_connect_without_contact_24px"
                app:showAsAction="ifRoom"
                />

            <item android:id="@+id/menu_manual"
                android:title="@string/manual"
                android:icon="@drawable/ic_menu_book_24"
                app:showAsAction="ifRoom"
                />

            <item android:id="@+id/menu_settings"
                android:title="@string/settings"
                android:icon="@drawable/ic_settings_24"
                app:showAsAction="ifRoom"
                />

            <item android:id="@+id/menu_stats"
                android:title="@string/Stats"
                android:icon="@drawable/ic_memory_24"
                app:showAsAction="ifRoom"
                />

            <item android:id="@+id/menu_sendmail"
                android:title="@string/menu_sendmail"
                android:icon="@drawable/ic_mail_24"
                app:showAsAction="ifRoom"
                />
            <item android:id="@+id/menu_cleanMemory"
                android:title="@string/Cleaning"
                android:icon="@drawable/ic_delete_24"
                app:showAsAction="ifRoom"
                />
            <item android:id="@+id/menu_website"
                android:title="@string/Website"
                android:icon="@drawable/ic_captive_portal_24"
...
