<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    style="@style/MainContainer"
    >

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:orientation="vertical"
        android:paddingBottom="16dp">

...
                <TextView style="@style/OptionCheckBoxText"
                    android:text="@string/option_font_family"
                    android:layout_width="80dp"
                    />

                <Spinner
                    android:id="@+id/sp_font_family"
                    android:spinnerMode="dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Spinner" />
            </LinearLayout>

...
            android:text="@string/podcast_settings"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />
        <Button
            android:id="@+id/btn_show_advanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_show_advanced_options"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
...
